log/build_2024-05-09_02-18-36/satellite_run/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/andrew/leto/install/satellite_run/lib/python3.10/site-packages/satellite_run/SpawnService.py", line 43
    await launch_service.run_async()
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: 'await' outside async function

